[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "OpenFAST"
version = "0.0.1"
description="OpenFAST with bindings to Python"
readme = "README.rst"
authors = [
  { name = "Henry Korb", email = "henry.korb@geo.uu.se" },
]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[tool.cmake]
jobs = 8

[tool.scikit-build]
build-dir = "build"
wheel.install-dir = "OpenFAST"
wheel.packages = ["glue-codes/openfast-pythonbindings/OpenFAST"]
cmake.verbose = true
logging.level = "INFO"
strict-config = true

[tool.scikit-build.cmake.define]
BUILD_OPENFAST_CPP_API = "ON"
BUILD_SHARED_LIBS = "ON"
BUILD_OPENFAST_PYTHONBINDINGS = "ON"
OPENMP = "ON"
